--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,29 @@
 body{
+    /*
     background-color:#141e23;
     color: #fcfaf2;
+    */
+    color: #fcfcfc;
+    background-color: #111111;
     margin:0 auto;
-  	font-family: 'Consolas','Microsoft JhengHei';
+  	font-family: 'Open Sans','Consolas', 'Microsoft JhengHei', sans-serif;
   	font-size: 17px;
 }
 html,body{
     height:100%;
 }
 
+a:link{ color: #b0b0b0; text-decoration: none; transition: 0.2s; font-weight: bold;}
+a:visited{ color: #b0b0b0;}
+a:avtice{ color: #b0b0b0;}
+a:hover{ color: #ffffff;}
+
 #nav{
-    height:31px;
+    /*height:31px;*/
+    padding: 4px 0 2px 0;
 	width: 100%;
-	border-bottom:#bdc0ba 1px solid;
-	background-color:#000;
+	/*border-bottom:#060606 4px solid;*/
+	background-color:#1e1e1e;
 }
 #nav ul {
 	margin: 0 0;
@@ -33,6 +43,8 @@ html,body{
 	text-decoration: none;
 	display: inline-block;
 	float: left;
+	
+	transition: 0.2s;
 }
 #nav a:hover{
     color: #ffffff;
@@ -76,30 +88,6 @@ html,body{
     margin-bottom : 30px;
 }
 
-.AC {
-	color: #00cc00;
-	font-size: 20px;
-}
-
-.WA {
-	color: #cc0000;
-	font-size: 20px;
-}
-.NO {
-	color: #444444;	
-	font-size: 20px;
-}
-tr:nth-child(odd) {
-    background: #222222;
-}
-
-tr:nth-child(even) {
-    background: #141e23;
-}
-tr:hover{
-	background-color:#317082;
-	color:#FFF;
-}
 #jumbotron{
     background-color:rgba(0,0,0,0);
     color: #fcfaf2 !important;
