more styling (work in progress)

--- a/template/index/theme.css
+++ b/template/index/theme.css
@@ -8,6 +8,7 @@
     background-color: #ffffff;
     
     background-image: url('http://i.imgur.com/1JlNX0n.jpg');
+    background-size: cover;
 }
 
 #title-text {
