--- a/css/index.css
+++ b/css/index.css
@@ -12,10 +12,14 @@ body{
 html,body{
     height:100%;
 }
+small {
+    color: #555555;
+    font-weight: normal;
+}
 
-a:link{ color: #b0b0b0; text-decoration: none; transition: 0.2s; font-weight: bold;}
-a:visited{ color: #b0b0b0;}
-a:avtice{ color: #b0b0b0;}
+a:link{ color: #a0a0a0; text-decoration: none; transition: 0.2s; }
+a:visited{ color: #a0a0a0;}
+a:avtice{ color: #a0a0a0;}
 a:hover{ color: #ffffff;}
 
 #nav{
@@ -38,7 +42,7 @@ a:hover{ color: #ffffff;}
 #nav a {
 	margin: 0 0;
 	padding: 7.5px 8px 6.5px 8px;
-	color: #bdc0ba;
+	color: #888888;
 	font-size: 17px;
 	line-height: 17px;
 	text-decoration: none;
@@ -53,8 +57,9 @@ a:hover{ color: #ffffff;}
 .pull-r{
     float: right !important;
 }
-.container{
-   	width:95%;
+
+.container {
+    width: 100%;
 }
 
 #wrap {
@@ -100,6 +105,10 @@ a:hover{ color: #ffffff;}
     z-index: 0;
 }
 
+.page-header{
+    text-align: left;
+}
+
 .pointer{
     cursor:pointer;
 }
@@ -142,4 +151,19 @@ button {
 button:hover{
     background-color: #666666;
     cursor: pointer;
+}
+
+/* TABLES */
+th {
+    font-weight: normal;
+    border-bottom: 4px solid #111111;
+}
+
+#image-bar{
+    width: 100%;
+    height: 140px;
+    
+    background-image: url('http://i.imgur.com/KiKOjd6.jpg');
+    background-size: cover;
+    background-position: 0 500px;
 }
