--- a/template/rank/theme.css
+++ b/template/rank/theme.css
@@ -10,17 +10,28 @@
     color: #ffffff;
 }
 .AC {
+    width: 50px;
+    text-align: right;
 	color: #00cc00;
 	font-size: 20px;
 }
 
 .WA {
+    width: 50px;
+    text-align: right;
 	color: #cc0000;
 	font-size: 20px;
 }
 .NO {
+    width: 50px;
+    text-align: right;
 	color: #444444;	
 	font-size: 20px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
 }
 
 tr{
@@ -34,9 +45,13 @@ tr:nth-child(odd) {
 tr:nth-child(even) {
     background: #282828;
 }
-/*
-tr:hover{
-	background-color:#363636;
-	color:#FFF;
+tr .label{ width: 80px; }
+
+
+th { text-align: left; }
+td { padding: 0 4px;}
+
+
+.page-nav > li{
+    display: inline-block;
 }
-*/
