--- a/css/index.css
+++ b/css/index.css
@@ -59,9 +59,11 @@ a:hover{ color: #ffffff;}
 }
 
 .container {
+    width: 95%;
+}
+#mainnavbar{
     width: 100%;
 }
-
 #wrap {
   min-height: 100%;
   height: auto !important;
