--- a/template/user/theme.css
+++ b/template/user/theme.css
@@ -12,3 +12,62 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+
+#jumbotron{
+    min-height: 300px;
+    background-color:rgba(0,0,0,0);
+    color: #f0f0f0 !important;
+
+    overflow: hidden;
+}
+
+/*
+#user_view_avater{
+    width: 100%;
+    height: auto;
+    display: inline-block;
+}
+
+@media screen and (max-width: 500px) {
+    .avatar-box{
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+}
+
+@media screen and (min-width: 500px){
+    .avatar-box{
+        width: 20%;
+        height: auto;
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
+
+*/
+
+
+
+#cover {
+    width: 100%;
+    height: 418px;
+    background-size: cover;
+    position: absolute;
+    top: 32px;
+    left: 0;
+    z-index: 0;
+}
+/*
+.avatar-box {
+    display: block;
+    box-sizing: border-box;
+    width: 25%;
+    float: left;
+    position: relative;
+    min-height: 40px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+*/
