--- a/css/index.css
+++ b/css/index.css
@@ -17,11 +17,11 @@ small {
     font-weight: normal;
 }
 
-a:link{ color: #a0a0a0; text-decoration: none; transition: 0.2s; }
+a:link{ color: #a0a0a0; text-decoration: none; transition: 0.3s; }
 a:visited{ color: #a0a0a0;}
 a:avtice{ color: #a0a0a0;}
 a:hover{ color: #ffffff;}
-.link-like{ color: #a0a0a0; text-decoration: none; transition: 0.2s; cursor: pointer;}
+.link-like{ color: #a0a0a0; text-decoration: none; transition: 0.3s; cursor: pointer;}
 .link-like:hover{ color: #ffffff; }
 
 h1 {
@@ -134,25 +134,34 @@ input[type = "text"]:focus{outline: none;}
 .textinput:focus{ outline: none;}
 
 label {
+    font-size: 14px;
+    
     color: #666666;
     font-weight: normal;
 }
 
 button {
-    padding: 6px;
-    
-    color: #444444;
-    background-color: #ffffff;
+    padding: 8px 12px;
     
     border: none;
     
-    transition: 0.2s;
+    transition: 0.4s;
 }
+button:hover{ cursor: pointer; }
+.rounded { border-radius: 4px; }
 
-button:hover{
-    background-color: #666666;
-    cursor: pointer;
-}
+.btn-large{ font-size: 14px; font-weight: bold;}
+
+.btn-blu { color: #f0f0f0; background-color: #3366ff; }
+.btn-blu:hover { color: #f0faff; background-color: #2447b2; }
+
+.btn-grn { color: #f0f0f0; background-color: #009933; }
+.btn-grn:hover { color: #f0faff; background-color: #006b24; }
+
+.btn-red { color: #f0f0f0; background-color: #ff1919; }
+.btn-red:hover { color: #f0faff; background-color: #cc0000; }
+
+.btn-wide{ width: 168px;}
 
 /* TABLES */
 th {
@@ -167,4 +176,10 @@ th {
     background-image: url('http://i.imgur.com/KiKOjd6.jpg');
     background-size: cover;
     background-position: 0 68%;
+}
+
+#image-column{
+    width: 160px;
+    background-image: url('http://i.imgur.com/KiKOjd6.jpg');
+    background-size: cover;
 }
