--- a/template/index/theme.css
+++ b/template/index/theme.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 600px;
     
-    padding: 40px;
+    padding-top: 40px;
     
     color: #444444;
     background-color: #ffffff;
