--- a/template/rank/theme.css
+++ b/template/rank/theme.css
@@ -11,20 +11,20 @@
 }
 .AC {
     width: 50px;
-    text-align: right;
+    /*text-align: right;*/
 	color: #00cc00;
 	font-size: 20px;
 }
 
 .WA {
     width: 50px;
-    text-align: right;
+    /*text-align: right;*/
 	color: #cc0000;
 	font-size: 20px;
 }
 .NO {
     width: 50px;
-    text-align: right;
+    /*text-align: right;*/
 	color: #444444;	
 	font-size: 20px;
 }
