--- a/template/user/theme.css
+++ b/template/user/theme.css
@@ -7,10 +7,8 @@
     min-height: 300px;
     background-color:rgba(0,0,0,0);
     color: #f0f0f0 !important;
-
     overflow: hidden;
 }
-
 
 #user_view_avater{
     width: 100%;
@@ -18,25 +16,6 @@
     display: inline-block;
 }
 
-/*
-@media screen and (max-width: 500px) {
-    .avatar-box{
-        width: 100%;
-        height: auto;
-        display: block;
-    }
-}
-
-@media screen and (min-width: 500px){
-    .avatar-box{
-        width: 20%;
-        height: auto;
-        display: inline-block;
-        vertical-align: middle;
-    }
-}
-
-*/
 #cover {
     width: 100%;
     height: 418px;
@@ -92,8 +71,19 @@
     color : #FFF;
 }
 
-
 .login_comment
 {
     color : #373737;
+}
+
+.nav-pills>li>a:hover
+{
+    background-color:#317082;
+    transition : 0.3s;
+}
+
+#panel
+{
+    background-color : #1A1A1A;
+    border-radius: 4px;
 }
