--- a/template/user/theme.css
+++ b/template/user/theme.css
@@ -37,9 +37,11 @@
     padding-left: 15px;
 }
 */
+/*
 #dispaly{
     transition : 0.2s;
 }
+*/
 .login_form
 {
     background-color:rgba(147,147,147,0.47);
