Update some url error and  add realname col.

--- a/css/index.css
+++ b/css/index.css
@@ -146,13 +146,13 @@ th {
     width: 100%;
     height: 100px;
     
-    background-image: url('http://i.imgur.com/KiKOjd6.jpg');
+    background-image: url('//i.imgur.com/KiKOjd6.jpg');
     background-size: cover;
     background-position: 0 65%;
 }
 
 #image-column{
-    background-image: url('http://i.imgur.com/KiKOjd6.jpg');
+    background-image: url('//i.imgur.com/KiKOjd6.jpg');
     background-size: cover;
 }
 .panel{
