--- a/template/user/theme.css
+++ b/template/user/theme.css
@@ -34,14 +34,14 @@
 
 .loginbody
 {
-    background-image : url('http://i.imgur.com/4HO4W6L.jpg');
+    background-image : url('https://i.imgur.com/4HO4W6L.jpg');
     background-size: cover;
     background-position : 0 60%;
 }
 
 .registerbody
 {
-    background-image : url('http://i.imgur.com/I9fosHb.jpg');
+    background-image : url('https://i.imgur.com/I9fosHb.jpg');
     background-size: cover;
     background-position : 0 60%;
 }
