--- a/template/index/theme.css
+++ b/template/index/theme.css
@@ -7,7 +7,7 @@
     color: #444444;
     background-color: #ffffff;
     
-    background-image: url('http://i.imgur.com/1JlNX0n.jpg');
+    background-image: url('https://i.imgur.com/1JlNX0n.jpg');
     background-size: cover;
 }
 
