Move FormInfo to /SKYOJ & add INPUT SELECT

--- a/css/index.css
+++ b/css/index.css
@@ -105,10 +105,12 @@ input[type = "text"]:focus{outline: none;}
 .textinput:focus{ outline: none; border-bottom: 4px solid #cccccc;}
 
 label {
-    font-size: 14px;
-    
-    color: #666666;
+    color: #FFF;
     font-weight: normal;
+    font-size: 14px;
+}
+.modal-body>div>form>.form-group>label {
+    color: #000;
 }
 
 button {
