--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ a:link{ color: #a0a0a0; text-decoration: none; transition: 0.3s; }
 a:visited{ color: #a0a0a0;}
 a:avtice{ color: #a0a0a0;}
 a:hover{ color: #ffffff;}
-.link-like{ color: #a0a0a0; text-decoration: none; transition: 0.3s; cursor: pointer;}
+.link-like{ color: #cccccc; text-decoration: none; transition: 0.3s; cursor: pointer;}
 .link-like:hover{ color: #ffffff; }
 
 h1 {
