--- a/css/index.css
+++ b/css/index.css
@@ -13,8 +13,10 @@ small {
     font-weight: normal;
 }
 
-a:link{ color: #a0a0a0; text-decoration: none; transition: 0.3s; }
-a:visited{ color: #a0a0a0;}
+a:visited{ color: #a0a0a0; }
+a.btn:visited{color: #dddddd; }
+a.btn:hover{ color: #ffffff; }
+a:link{ color: #dddddd; text-decoration: none; transition: 0.3s; }
 a:avtice{ color: #a0a0a0;}
 a:hover{ color: #ffffff;}
 .link-like{ color: #cccccc; text-decoration: none; transition: 0.3s; cursor: pointer;}
